Add portfolio section to index.html
Added portfolio section with project links.

--- a/index.html
+++ b/index.html
@@ -176,6 +176,24 @@
           </section>
         </div>
       </section>
+
+      <!-- ******************  PORTFOLIO ****************** -->
+
+      <section class="portfolio">
+        <div class="content-wrap item-details">
+          <h2>Portfolio</h2>
+
+          <section class="portfolio-item">
+            <div class="portfolio-detail">
+              <h3>experiencegrandbahamaisland.com/</h3>
+            </div>
+          </section>
+
+          <section class="portfolio-item">
+            <div class="portfolio-detail">
+              <h3>ticodirectorio.com</h3>
+            </div>
+          </section>
       
     
 
