Rename portfolio section to projects

--- a/index.html
+++ b/index.html
@@ -179,18 +179,18 @@
 
       <!-- ******************  PORTFOLIO ****************** -->
 
-      <section class="portfolio">
+      <section class="projects">
         <div class="content-wrap item-details">
           <h2>Portfolio</h2>
 
-          <section class="portfolio-item">
-            <div class="portfolio-detail">
+          <section class="project-item">
+            <div class="project-detail">
               <h3>experiencegrandbahamaisland.com/</h3>
             </div>
           </section>
 
-          <section class="portfolio-item">
-            <div class="portfolio-detail">
+          <section class="project-item">
+            <div class="project-detail">
               <h3>ticodirectorio.com</h3>
             </div>
           </section>
