Fix HTML structure by closing div tags

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
               <h3>ticodirectorio.com</h3>
             </div>
           </section>
-      
+
+          </div>
+      </section>
     
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
