--- a/index.html
+++ b/index.html
@@ -185,13 +185,21 @@
 
           <section class="project-item">
             <div class="project-detail">
-              <h3>experiencegrandbahamaisland.com/</h3>
+              <h3>
+                <a href="https://experiencegrandbahamaisland.com" target="_blank" rel="noopener noreferrer">
+        experiencegrandbahamaisland.com
+      </a>
+              </h3>
             </div>
           </section>
 
           <section class="project-item">
             <div class="project-detail">
-              <h3>ticodirectorio.com</h3>
+              <h3>
+                <a href="https://ticodirectorio.com" target="_blank" rel="noopener noreferrer">
+        ticodirectorio.com
+      </a>
+              </h3>
             </div>
           </section>
 
